# doc-to-llm

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  package.json  pyproject.toml  upgrade_pyproject.py
.github/workflows/: ci.yaml  lint.yaml  lint.yml
.husky/: pre-commit
app/: main.py
app/routes/: base.py  translate.py  translations.py
app/services/: ai.py  markdown.py  ollama.py  openai.py
app/utils/: config.py
apps/docus/: Dockerfile  package.json  pnpm-lock.yaml
apps/server/: Dockerfile  main.py  pyproject.toml  upgrade_pyproject.py
apps/server/src/core/: database.py  logger.py
apps/server/src/routes/: format.py  openai.py  translate.py
apps/server/src/schemas/: format.py  translate.py
apps/server/src/services/: translate.py  vitepress.py
src/: main.py  schemas.py
src/core/: config.py
src/routes/: base.py  format.py  openai.py  translate.py  translations.py
src/services/: ai.py  llm_service.py  ollama.py  openai.py
src/shared/: api.py  ollama.py  openai.py
src/translator/: ai.py  markdown.py  router.py  schemas.py
src/utils/: config.py  logger.py  markdown.py
